# BlockingCollection

./: BlockingCollection.h  CMakeLists.txt  README.md
include/code_machina/: BlockingCollection.h
tests/: CMakeLists.txt  unit_tests.cpp
